# MeterAI

./: .gitignore  CLAUDE.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  build-windows.bat  build-windows.ps1  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml  version-check.yml
docs/: SIGNPATH_READINESS_REPORT.md
scripts/: bump-version.js  generate-icons.js
src/: App.tsx  providers.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
