[package]
name = "meter-ai"
version = "1.1.1"
description = "Multi-provider AI usage tracker - Monitor your Claude, OpenAI, and other AI API usage"
authors = ["MeterAI"]
license = "MIT"
repository = "https://github.com/PopeYeahWine/MeterAI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-request", "process-all", "notification-all", "shell-open", "system-tray", "window-all", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
notify-rust = "4"
dirs = "5"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
keyring = "2"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
